refactor: adopt latest Angular & Java idioms
Angular 21:
- Signal inputs/outputs (input()/output()) replace @Input()/@Output() in shared
  primitives (button, page-header, column-filter, table-header-cell, count-up;
  count-up now uses effect() instead of ngOnChanges)
- inject() replaces constructor DI in all 7 core services
- (templates already on new control flow @if/@for; guards/interceptors functional)

Java 21:
- Stream.toList() over collect(Collectors.toList()); switch expressions,
  pattern-matching instanceof and records already in use

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>